Fix layout checkout woocommerce page on mobile

--- a/assets/css/learnpress.less
+++ b/assets/css/learnpress.less
@@ -1680,6 +1680,22 @@ body.content-item-only {
     margin-top: 20px;
 }
 
+.woocommerce {
+    form .form-row {
+        &.validate-email, &.validate-phone {
+            width: 100% !important;
+        }
+    }
+
+    .checkout_coupon {
+        .form-row-last {
+            input.button {
+                padding: 13px 10px !important;
+            }
+        }
+    }
+}
+
 .learn-press-search-course-form {
     margin-bottom: 20px;
     input.search-course-input[name="s"] {
@@ -1836,6 +1852,16 @@ body.content-item-only {
         }
     }
 
+}
+
+@media (max-width: 480px) {
+    .woocommerce {
+        .checkout_coupon {
+            .form-row {
+                width: 100%;
+            }
+        }
+    }
 }
 
 /* full width with twentysixteen theme */
